--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "react-media-recorder": "^1.7.2",
     "react-router-dom": "^7.10.1",
+    "react-speech-recognition": "^4.0.1",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
@@ -23,6 +23,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/react-speech-recognition": "^3.9.6",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
